--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
         </style>
         <script src="js/jquery.js"></script> 
          <script src="js/meuscript.js"></script>
-       <!---nyroModal--->
+       <!---nyroModal
+
        
         <script src="js/jquery.nyroModal/js/jquery.nyroModal.custom.js"></script>
          <link href="js/jquery.nyroModal/styles/nyroModal.css" media="screen" rel="stylesheet"/>
         <script src="js/jquery-mousewheel-3.1.13/jquery.mousewheel.js"></script>
         <script src="js/jquery-color-master/jquery.color.js"></script>
-       
+       --->
     </head>
     <html>
         <div id="janela">
