--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             }
             
         </style>
-        <script src="js/jquery.js"></script> 
-         <script src="js/meuscript.js"></script>
+        <script src="jquery.js"></script> 
+         <script src="meuscript.js"></script>
        <!---nyroModal
 
        
