--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             }
             
         </style>
-        <script src="js/jquery.js" type=text/javascript></script> 
+        <script src="jquery.js" type=text/javascript></script> 
          <script src="js/meuscript.js" type=text/javascript></script>
        <!---nyroModal  --->
 
@@ -80,7 +80,7 @@
     <html>
         <div id="janela">
             <ul>
-            <a href="https://www.youtube.com/watch?v=SSVFh7EJtWo&t=1s" class="nyroModal" rel="gal"></a>
+            
             </ul>
         </div>
 
