--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             
         </style>
         <script src="jquery.js" type=text/javascript></script> 
-         <script src="js/meuscript.js" type=text/javascript></script>
+         <script src="meuscript.js" type=text/javascript></script>
        <!---nyroModal  --->
 
        
-        <script src="js/jquery.nyroModal/js/jquery.nyroModal.custom.js"></script>
-         <link href="js/jquery.nyroModal/styles/nyroModal.css" media="screen" rel="stylesheet"/>
-        <script src="js/jquery-mousewheel-3.1.13/jquery.mousewheel.js"></script>
-        <script src="js/jquery-color-master/jquery.color.js"></script>
+        <script src="jquery.nyroModal.custom.js" type=text/javascript></script>
+         <link href="nyroModal.css" media="screen" rel="stylesheet"/>
+        <script src="jquery.mousewheel.js" type=text/javascript></script>
+        <script src="jquery-color-master/jquery.color.js" type=text/javascript></script>
    
     </head>
     <html>
