--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             
             </ul>
         </div>
-
+    <script type=text/javascript>
+    $(function() {
+  $('.nyroModal').nyroModal();
+});
+        </script>
     </html>
 </html>
