--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
        <!---nyroModal  --->
 
        <link href="nyroModal.css" media="screen" rel="stylesheet"/>
-        <script src="jquery.nyroModal.custom.js" type=text/javascript></script>
-       
+        <script src="jquery.nyroModal.custom.js"  type=text/javascript></script>
+       <script src="jquery.mousewheel.js" type=text/javascript></script>
+        <script src="jquery.color.js" type=text/javascript></script>
      
    
     </head>
