--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <script src="jquery.js" type=text/javascript></script> 
         <script src="meuscript.js" type=text/javascript></script>
        <!---fancybox  --->
-       <script src="fancybox.js"  type=text/javascript></script>
-       <link href="fancybox.css" media="screen" rel="stylesheet"/>
-      <script src="fancybox-media.js"  type=text/javascript></script>
+       <script src="jquery.fancybox.js"  type=text/javascript></script>
+       <link href="jquery.fancybox.css" media="screen" rel="stylesheet"/>
+      <script src="jquery.fancybox-media.js"  type=text/javascript></script>
      <script type=text/javascript>
          $(document).ready(function(){
             $('.fancybox').fancybox();
