--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             }
            
         </style>
-        <script src="jquery.js" type=text/javascript></script> 
-        <script src="meuscript.js" type=text/javascript></script>
+        <script src="jquery.js" type="text/javascript"></script> 
+       
        <!---fancybox  --->
-       <script src="jquery.fancybox.js"  type=text/javascript></script>
-       <link href="jquery.fancybox.css" media="screen" rel="stylesheet"/>
-      <script src="jquery.fancybox-media.js"  type=text/javascript></script>
-     <script type=text/javascript>
+       <script src="jquery.fancybox.js"  type="text/javascript"></script>
+       <link href="jquery.fancybox.css" media="screen" rel="stylesheet"type="text/css" />
+      <script src="jquery.fancybox-media.js"  type="text/javascript"></script>
+         <script src="meuscript.js" type="text/javascript"></script>
+     <script type="text/javascript">
          $(document).ready(function(){
             $('.fancybox').fancybox();
              var fbWidth=800;
